[gd_scene load_steps=25 format=3 uid="uid://jxmlqa5oskle"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_faqmt"]
[ext_resource type="Texture2D" uid="uid://d3vqxt5do8kf1" path="res://assets/art/ship_D.png" id="2_4ndik"]
[ext_resource type="Texture2D" uid="uid://tnyxbpaj6bwh" path="res://assets/art/meteor_detailedLarge.png" id="3_daghw"]
[ext_resource type="Texture2D" uid="uid://dvli1ej3wu0yw" path="res://assets/art/purple_body_square.png" id="3_t4dyr"]
[ext_resource type="Texture2D" uid="uid://dknc17anudb2r" path="res://assets/art/0-Water.png" id="3_w8ccc"]
[ext_resource type="Texture2D" uid="uid://bd3ype8au0xqy" path="res://assets/art/3-Fire.png" id="4_73bmn"]
[ext_resource type="Texture2D" uid="uid://cvqupt3mbl104" path="res://assets/art/purple_body_squircle.png" id="4_e24dh"]
[ext_resource type="Texture2D" uid="uid://c3bcqxb8q5bsc" path="res://assets/art/1-Metal.png" id="4_oe6vg"]
[ext_resource type="Texture2D" uid="uid://b158rdfcwtmid" path="res://assets/art/meteor_squareLarge.png" id="5_eh7an"]
[ext_resource type="Texture2D" uid="uid://csapbmukdisbd" path="res://assets/art/2-Earth.png" id="5_josf6"]
[ext_resource type="Texture2D" uid="uid://dyohuuw7238go" path="res://assets/art/4-Wood.png" id="6_ke6rb"]
[ext_resource type="Texture2D" uid="uid://cna64s1b4oecl" path="res://assets/art/yellow_body_square.png" id="9_2bl7d"]
[ext_resource type="Texture2D" uid="uid://c7ivf8wxpxr4b" path="res://assets/art/yellow_body_squircle.png" id="10_a4m6f"]
[ext_resource type="Texture2D" uid="uid://hr5cx6qinrms" path="res://assets/art/particleYellow_3.png" id="11_grhhv"]
[ext_resource type="Texture2D" uid="uid://enbuvaorlog7" path="res://assets/art/particleBlue_3.png" id="12_8mmuo"]
[ext_resource type="Texture2D" uid="uid://bqhiq8p2o2lho" path="res://assets/art/particleYellow_6.png" id="13_uual6"]
[ext_resource type="Texture2D" uid="uid://bgws787suyx8s" path="res://assets/art/tileGrey_02.png" id="14_3k7yq"]
[ext_resource type="Texture2D" uid="uid://6y7mu3vjeohj" path="res://assets/art/particleBlue_6.png" id="14_7l0o1"]
[ext_resource type="Texture2D" uid="uid://ckhe6hytlq6x6" path="res://assets/art/icon_crossSmall.png" id="19_2ug6j"]

[sub_resource type="LabelSettings" id="LabelSettings_hwoe0"]
font_size = 44
font_color = Color(1, 1, 0.372549, 1)
outline_size = 10
outline_color = Color(0.154876, 0.154876, 0.154876, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eycg6"]
font_size = 44
font_color = Color(0.305882, 1, 1, 1)
outline_size = 10
outline_color = Color(0.133196, 0.133196, 0.133196, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m8qh1"]
font_size = 120
outline_size = 30
outline_color = Color(0.169245, 0.169245, 0.169245, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bl4g0"]
font_size = 60
outline_size = 10
outline_color = Color(0.190762, 0.190762, 0.190762, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kbai0"]
font_size = 44
outline_size = 10
outline_color = Color(0.180005, 0.180005, 0.180005, 1)
shadow_color = Color(0.172549, 0.172549, 0.172549, 0)

[node name="Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("drop_symbols")]
script = ExtResource("1_faqmt")
falling_move_duration = 0.25
drop_symbols = [NodePath("UI/DropBar/DropSymbol1"), NodePath("UI/DropBar/DropSymbol2"), NodePath("UI/DropBar/DropSymbol3"), NodePath("UI/DropBar/DropSymbol4"), NodePath("UI/DropBar/DropSymbol5")]

[node name="SoulObjects" type="Node" parent="GameManager"]

[node name="Target" type="Node2D" parent="GameManager"]
position = Vector2(269.314, 95.6137)

[node name="BGSprite" type="Sprite2D" parent="GameManager/Target"]
modulate = Color(0.15645, 0.147, 0.21, 1)
rotation = -3.14159
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_2bl7d")

[node name="TargetSprite0" type="Sprite2D" parent="GameManager/Target"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_w8ccc")

[node name="TargetSprite1" type="Sprite2D" parent="GameManager/Target"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_oe6vg")

[node name="TargetSprite2" type="Sprite2D" parent="GameManager/Target"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_josf6")

[node name="TargetSprite3" type="Sprite2D" parent="GameManager/Target"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_73bmn")

[node name="TargetSprite4" type="Sprite2D" parent="GameManager/Target"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_ke6rb")

[node name="UI" type="Node" parent="GameManager"]

[node name="UIPosition" type="Node2D" parent="GameManager/UI"]
position = Vector2(32.5, 0)

[node name="Add" type="Button" parent="GameManager/UI/UIPosition"]
visible = false
offset_left = -357.0
offset_top = -260.0
offset_right = -227.0
offset_bottom = -195.0
text = "Add Line"
icon_alignment = 1

[node name="Toggle" type="Button" parent="GameManager/UI/UIPosition"]
offset_left = -383.913
offset_top = -25.4271
offset_right = -215.913
offset_bottom = 142.573
flat = true
icon_alignment = 1

[node name="Move" type="Button" parent="GameManager/UI/UIPosition"]
visible = false
offset_left = -357.0
offset_top = -195.0
offset_right = -227.0
offset_bottom = -130.0
text = "Move Falling"
icon_alignment = 1

[node name="Mode" type="Button" parent="GameManager/UI/UIPosition"]
offset_left = -383.913
offset_top = 146.705
offset_right = -215.913
offset_bottom = 314.705
theme_override_font_sizes/font_size = 24
button_mask = 7
flat = true
icon_alignment = 1
language = "en"

[node name="MoveLeft" type="Button" parent="GameManager/UI/UIPosition"]
custom_minimum_size = Vector2(65, 65)
offset_left = -195.0
offset_top = 260.0
offset_right = -130.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 40
text = "
"
flat = true
icon_alignment = 1

[node name="MoveRight" type="Button" parent="GameManager/UI/UIPosition"]
custom_minimum_size = Vector2(65, 65)
offset_left = 65.0
offset_top = 260.0
offset_right = 130.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 40
text = "
"
flat = true
icon_alignment = 1

[node name="Launch" type="Button" parent="GameManager/UI/UIPosition"]
custom_minimum_size = Vector2(65, 65)
offset_left = -130.0
offset_top = 260.0
offset_right = 65.0
offset_bottom = 325.0
flat = true
icon_alignment = 1

[node name="GiveUp" type="Button" parent="GameManager/UI/UIPosition"]
custom_minimum_size = Vector2(65, 65)
offset_left = -361.247
offset_top = -307.898
offset_right = -231.247
offset_bottom = -242.898
flat = true
icon_alignment = 1

[node name="Lane0" type="Button" parent="GameManager/UI/UIPosition"]
z_index = -1
custom_minimum_size = Vector2(65, 65)
offset_left = -195.0
offset_top = 195.0
offset_right = -130.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "1"
flat = true
icon_alignment = 1

[node name="Lane1" type="Button" parent="GameManager/UI/UIPosition"]
z_index = -1
custom_minimum_size = Vector2(65, 65)
offset_left = -130.0
offset_top = 195.0
offset_right = -65.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "2"
flat = true
icon_alignment = 1

[node name="Lane2" type="Button" parent="GameManager/UI/UIPosition"]
z_index = -1
custom_minimum_size = Vector2(65, 65)
offset_left = -65.0
offset_top = 195.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "3"
flat = true
icon_alignment = 1

[node name="Lane3" type="Button" parent="GameManager/UI/UIPosition"]
z_index = -1
custom_minimum_size = Vector2(65, 65)
offset_top = 195.0
offset_right = 65.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "4"
flat = true
icon_alignment = 1

[node name="Lane4" type="Button" parent="GameManager/UI/UIPosition"]
z_index = -1
custom_minimum_size = Vector2(65, 65)
offset_left = 65.0
offset_top = 195.0
offset_right = 130.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 30
text = "5"
flat = true
icon_alignment = 1

[node name="AutoLaunchOn" type="Node2D" parent="GameManager/UI"]
z_index = -8
position = Vector2(-265.826, 56.4201)

[node name="AutoLaunchSprite" type="Sprite2D" parent="GameManager/UI/AutoLaunchOn"]
modulate = Color(0.557908, 0.878735, 8.08597e-06, 1)
position = Vector2(0, 15.5566)
texture = ExtResource("2_4ndik")

[node name="AutoLaunchSprite2" type="Sprite2D" parent="GameManager/UI/AutoLaunchOn"]
modulate = Color(0.557908, 0.878735, 8.08597e-06, 1)
position = Vector2(0, -24.8064)
texture = ExtResource("2_4ndik")

[node name="AutoLaunchOff" type="Node2D" parent="GameManager/UI"]
z_index = -8
position = Vector2(-265.826, 56.4201)

[node name="AutoLaunchSprite" type="Sprite2D" parent="GameManager/UI/AutoLaunchOff"]
modulate = Color(0.378359, 0.23651, 0.261106, 1)
position = Vector2(0, 15.5566)
texture = ExtResource("2_4ndik")

[node name="AutoLaunchSprite2" type="Sprite2D" parent="GameManager/UI/AutoLaunchOff"]
modulate = Color(0.378359, 0.23651, 0.261106, 1)
position = Vector2(0, -24.8064)
texture = ExtResource("2_4ndik")

[node name="ModeLight" type="Node2D" parent="GameManager/UI"]
position = Vector2(-264.238, 228.553)

[node name="LightSprite" type="Sprite2D" parent="GameManager/UI/ModeLight"]
modulate = Color(1, 0.827451, 0.282353, 1)
position = Vector2(0, -17.9594)
texture = ExtResource("3_daghw")

[node name="LightSprite2" type="Sprite2D" parent="GameManager/UI/ModeLight"]
modulate = Color(0.662334, 0.528558, 7.70092e-07, 1)
z_index = -1
position = Vector2(0, 26.458)
scale = Vector2(0.639999, 0.599999)
texture = ExtResource("4_73bmn")
flip_v = true

[node name="ModeShadows" type="Node2D" parent="GameManager/UI"]
position = Vector2(-264.238, 228.553)

[node name="ShadowsSprite" type="Sprite2D" parent="GameManager/UI/ModeShadows"]
modulate = Color(0.527232, 0.168958, 0.99997, 1)
position = Vector2(0, -17.9594)
texture = ExtResource("5_eh7an")

[node name="ShadowsSprite2" type="Sprite2D" parent="GameManager/UI/ModeShadows"]
modulate = Color(0.4921, 0.2442, 0.74, 1)
z_index = -1
position = Vector2(0, 26.458)
scale = Vector2(0.639999, 0.599999)
texture = ExtResource("6_ke6rb")
flip_v = true

[node name="Light" type="Node2D" parent="GameManager/UI"]

[node name="FallingBoard" type="Sprite2D" parent="GameManager/UI/Light"]
self_modulate = Color(0.435192, 0.435192, 0.435192, 1)
z_index = -10
position = Vector2(0, -97.5)
scale = Vector2(2.03125, 2.84375)
texture = ExtResource("9_2bl7d")

[node name="LauchBoard" type="Sprite2D" parent="GameManager/UI/Light"]
self_modulate = Color(0.435192, 0.435192, 0.435192, 1)
z_index = -10
position = Vector2(0, 162.5)
scale = Vector2(2.03125, 0.40625)
texture = ExtResource("9_2bl7d")
flip_v = true

[node name="LaunchBack" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(0, 292.5)
scale = Vector2(1.21875, 0.40625)
texture = ExtResource("9_2bl7d")
flip_v = true

[node name="GiveUpBack" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(-263.493, -275.398)
scale = Vector2(0.809316, 0.40625)
texture = ExtResource("9_2bl7d")
flip_v = true

[node name="LaunchIcon" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -9
position = Vector2(0, 289.827)
scale = Vector2(1, 0.7)
texture = ExtResource("2_4ndik")

[node name="LeftIcon" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -9
position = Vector2(-132.839, 293.441)
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4ndik")

[node name="RightIcon" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -9
position = Vector2(132.839, 293.441)
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4ndik")
flip_v = true

[node name="LeftBack" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(-130, 292.5)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="RightBack" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(130, 292.5)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="Back1" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(-130, 227.5)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="Back2" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(-65, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="Back3" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(1.66893e-06, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="Back4" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(65, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="Back5" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(130, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="BackToggle" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(-267.413, 55.8229)
scale = Vector2(1.05, 1.01563)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="BackMode" type="Sprite2D" parent="GameManager/UI/Light"]
z_index = -10
position = Vector2(-267.413, 230.259)
scale = Vector2(1.05, 1.04442)
texture = ExtResource("10_a4m6f")
flip_v = true

[node name="Shadows" type="Node2D" parent="GameManager/UI"]

[node name="FallingBoard" type="Sprite2D" parent="GameManager/UI/Shadows"]
self_modulate = Color(0.435192, 0.435192, 0.435192, 1)
z_index = -10
position = Vector2(0, -97.5)
scale = Vector2(2.03125, 2.84375)
texture = ExtResource("3_t4dyr")

[node name="LauchBoard" type="Sprite2D" parent="GameManager/UI/Shadows"]
self_modulate = Color(0.435192, 0.435192, 0.435192, 1)
z_index = -10
position = Vector2(0, 162.5)
scale = Vector2(2.03125, 0.40625)
texture = ExtResource("3_t4dyr")
flip_v = true

[node name="LaunchBack" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(0, 292.5)
scale = Vector2(1.21875, 0.40625)
texture = ExtResource("3_t4dyr")
flip_v = true

[node name="GiveUpBack" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(-263.493, -275.398)
scale = Vector2(0.809316, 0.40625)
texture = ExtResource("3_t4dyr")
flip_v = true

[node name="LaunchIcon" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -9
position = Vector2(0, 289.827)
scale = Vector2(1, 0.7)
texture = ExtResource("2_4ndik")

[node name="LeftIcon" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -9
position = Vector2(-132.839, 293.441)
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4ndik")

[node name="RightIcon" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -9
position = Vector2(132.839, 293.441)
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4ndik")
flip_v = true

[node name="LeftBack" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(-130, 292.5)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="RightBack" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(130, 292.5)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="Back1" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(-130, 227.5)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="Back2" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(-65, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="Back3" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(1.66893e-06, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="Back4" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(65, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="Back5" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(130, 227.51)
scale = Vector2(0.40625, 0.406123)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="BackToggle" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(-267.413, 55.8229)
scale = Vector2(1.05, 1.01563)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="BackMode" type="Sprite2D" parent="GameManager/UI/Shadows"]
z_index = -10
position = Vector2(-267.413, 230.259)
scale = Vector2(1.05, 1.04442)
texture = ExtResource("4_e24dh")
flip_v = true

[node name="DropBar" type="Node2D" parent="GameManager/UI"]
position = Vector2(-265.826, -217.133)
scale = Vector2(1.25, 0.8)

[node name="BGSprite" type="Sprite2D" parent="GameManager/UI/DropBar"]
modulate = Color(0.15645, 0.147, 0.21, 1)
position = Vector2(0, 104.608)
rotation = -3.14159
scale = Vector2(0.723023, 1.44726)
texture = ExtResource("9_2bl7d")

[node name="DropSymbol1" type="Node2D" parent="GameManager/UI/DropBar"]

[node name="Sprite2D" type="Sprite2D" parent="GameManager/UI/DropBar/DropSymbol1"]
modulate = Color(1, 0.752941, 0.396078, 1)
position = Vector2(0, 34.9235)
rotation = 3.14159
texture = ExtResource("2_4ndik")

[node name="DropSymbol2" type="Node2D" parent="GameManager/UI/DropBar"]
position = Vector2(0, 35)

[node name="Sprite2D" type="Sprite2D" parent="GameManager/UI/DropBar/DropSymbol2"]
modulate = Color(1, 0.584314, 0.396078, 1)
position = Vector2(0, 34.9235)
rotation = 3.14159
texture = ExtResource("2_4ndik")

[node name="DropSymbol3" type="Node2D" parent="GameManager/UI/DropBar"]
position = Vector2(0, 70)

[node name="Sprite2D" type="Sprite2D" parent="GameManager/UI/DropBar/DropSymbol3"]
modulate = Color(1, 0.431373, 0.396078, 1)
position = Vector2(0, 34.9235)
rotation = 3.14159
texture = ExtResource("2_4ndik")

[node name="DropSymbol4" type="Node2D" parent="GameManager/UI/DropBar"]
position = Vector2(0, 105)

[node name="Sprite2D" type="Sprite2D" parent="GameManager/UI/DropBar/DropSymbol4"]
modulate = Color(1, 0.27451, 0.396078, 1)
position = Vector2(0, 34.923)
rotation = -3.14159
texture = ExtResource("2_4ndik")

[node name="DropSymbol5" type="Node2D" parent="GameManager/UI/DropBar"]
position = Vector2(0, 140)

[node name="Sprite2D" type="Sprite2D" parent="GameManager/UI/DropBar/DropSymbol5"]
modulate = Color(1, 0.0901961, 0.356863, 1)
position = Vector2(0, 34.9235)
rotation = 3.14159
texture = ExtResource("2_4ndik")

[node name="Score" type="Node2D" parent="GameManager/UI"]
position = Vector2(184.208, -324.108)

[node name="ScoreLight" type="Label" parent="GameManager/UI/Score"]
clip_contents = true
custom_minimum_size = Vector2(168, 0)
offset_top = 0.775146
offset_right = 168.0
offset_bottom = 61.7751
theme_override_font_sizes/font_size = 60
text = "0"
label_settings = SubResource("LabelSettings_hwoe0")
horizontal_alignment = 2
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[node name="ScoreShadows" type="Label" parent="GameManager/UI/Score"]
clip_contents = true
custom_minimum_size = Vector2(168, 0)
offset_top = 108.681
offset_right = 168.0
offset_bottom = 169.681
theme_override_font_sizes/font_size = 60
text = "0"
label_settings = SubResource("LabelSettings_eycg6")
horizontal_alignment = 2
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[node name="Multiplier" type="Label" parent="GameManager/UI/Score"]
clip_contents = true
custom_minimum_size = Vector2(168, 0)
offset_left = 16.6489
offset_top = 178.681
offset_right = 184.649
offset_bottom = 343.681
theme_override_font_sizes/font_size = 60
text = "1"
label_settings = SubResource("LabelSettings_m8qh1")
horizontal_alignment = 2
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[node name="MultiTimer" type="Node2D" parent="GameManager/UI/Score/Multiplier"]
position = Vector2(57.205, 153.404)

[node name="Length" type="Node2D" parent="GameManager/UI/Score/Multiplier/MultiTimer"]

[node name="Sprite2D" type="Sprite2D" parent="GameManager/UI/Score/Multiplier/MultiTimer/Length"]
modulate = Color(0.82606, 0.82606, 0.82606, 1)
position = Vector2(41.047, 0)
scale = Vector2(0.43667, 0.2)
texture = ExtResource("14_3k7yq")

[node name="MultiX" type="Label" parent="GameManager/UI/Score"]
offset_left = 16.6489
offset_top = 178.681
offset_right = 184.649
offset_bottom = 343.681
theme_override_font_sizes/font_size = 60
text = "x"
label_settings = SubResource("LabelSettings_bl4g0")
vertical_alignment = 2
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[node name="LightStar" type="Sprite2D" parent="GameManager/UI/Score"]
z_index = -10
position = Vector2(17.479, 31.4203)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_grhhv")

[node name="LightShadows" type="Sprite2D" parent="GameManager/UI/Score"]
z_index = -10
position = Vector2(17.479, 140.375)
scale = Vector2(0.2, 0.2)
texture = ExtResource("12_8mmuo")
flip_v = true

[node name="Balance" type="Node2D" parent="GameManager/UI/Score"]
position = Vector2(16.6489, 84.3752)

[node name="BalanceStarL" type="Sprite2D" parent="GameManager/UI/Score/Balance"]
modulate = Color(1, 1, 1, 0.831373)
z_index = -10
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_uual6")

[node name="BalanceStarS" type="Sprite2D" parent="GameManager/UI/Score/Balance"]
modulate = Color(1, 1, 1, 0.831373)
z_index = -10
rotation = 0.785398
scale = Vector2(0.2, 0.2)
texture = ExtResource("14_7l0o1")

[node name="ScoreBalance" type="Label" parent="GameManager/UI/Score/Balance"]
clip_contents = true
custom_minimum_size = Vector2(168, 0)
offset_left = -16.6489
offset_top = -30.4048
offset_right = 151.351
offset_bottom = 30.5952
theme_override_font_sizes/font_size = 60
text = "0"
label_settings = SubResource("LabelSettings_kbai0")
horizontal_alignment = 2
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[node name="Icons" type="Node" parent="GameManager/UI"]

[node name="GiveUpIcon" type="Sprite2D" parent="GameManager/UI/Icons"]
z_index = -9
position = Vector2(-264.238, -274.388)
scale = Vector2(0.599999, 0.5)
texture = ExtResource("19_2ug6j")

[connection signal="pressed" from="GameManager/UI/UIPosition/Add" to="GameManager" method="_on_add_falling_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Toggle" to="GameManager" method="_on_toggle_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Move" to="GameManager" method="_on_move_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Mode" to="GameManager" method="_on_mode_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/MoveLeft" to="GameManager" method="_on_move_left_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/MoveRight" to="GameManager" method="_on_move_right_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Launch" to="GameManager" method="_on_launch_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/GiveUp" to="GameManager" method="_on_give_up_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Lane0" to="GameManager" method="_on_lane_0_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Lane1" to="GameManager" method="_on_lane_1_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Lane2" to="GameManager" method="_on_lane_2_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Lane3" to="GameManager" method="_on_lane_3_pressed"]
[connection signal="pressed" from="GameManager/UI/UIPosition/Lane4" to="GameManager" method="_on_lane_4_pressed"]
